kubernetes/infrastructure/rook-ceph/rook-ceph-cluster/overlays/prod/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: ceph
  namespace: rook-ceph
spec:
  parentRefs:
    - kind: Gateway
      name: main-gateway
      namespace: default
      sectionName: prod-tls-gw
  hostnames:
    - ceph.home.svc
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 7000
...
